--- a/data_mining_R/understandingR/understandingR.Rmd
+++ b/data_mining_R/understandingR/understandingR.Rmd
@@ -420,3 +420,9 @@ course.
 R Core Team (2016). R: A language and environment for statistical
   computing. R Foundation for Statistical Computing, Vienna, Austria. URL
   https://www.R-project.org/.
+  
+#Session Information
+
+```{r}
+sessionInfo()
+```
